--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,14 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/nan_bg"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp">
+            >
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
+            android:src="@mipmap/nav_menu_my"
+            android:paddingLeft="15dp"
             android:id="@+id/iv_user"/>
 
             <LinearLayout
@@ -66,25 +66,28 @@
             <LinearLayout
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_alignParentRight="true"
                 >
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="5dp"
                     android:id="@+id/iv_search"
-                    android:background="@color/white"
+                    android:src="@mipmap/nav_menu_search"
                     />
 
                 <ImageView
                     android:layout_marginLeft="10dp"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:id="@+id/iv_choice"
-                    android:background="@color/white" />
+                    android:paddingRight="15dp"
+                    android:src="@mipmap/nav_menu_list" />
             </LinearLayout>
         </RelativeLayout>
+
         <FrameLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
@@ -107,7 +110,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/black"
+            android:background="@mipmap/leftbar_bg"
             android:paddingTop="50dp"
             android:paddingBottom="15dp"
             >
@@ -116,6 +119,7 @@
                 android:layout_height="50dp"
                 android:background="@color/red"
                 android:layout_marginLeft="15dp"
+                android:id="@+id/iv_user_icon"
                 />
 
             <TextView
@@ -143,7 +147,8 @@
             >
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@mipmap/icn_my_order"/>
 
             <TextView
                 style="@style/text_normal"
@@ -161,7 +166,8 @@
             >
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@mipmap/icn_my_account"/>
 
             <TextView
                 style="@style/text_normal"
@@ -179,7 +185,9 @@
             >
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@mipmap/icn_phone"
+                />
 
             <TextView
                 style="@style/text_normal"
@@ -215,7 +223,9 @@
             >
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@mipmap/icn_setting"
+                />
 
             <TextView
                 style="@style/text_normal"
@@ -232,7 +242,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:background="@color/white"
-        android:paddingTop="50dp"
+
         android:orientation="vertical"
         >
         <View
@@ -241,16 +251,21 @@
             android:id="@+id/view_statue"
             />
         <LinearLayout
+            android:layout_marginTop="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:padding="15dp"
+            android:gravity="center_vertical"
             >
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@mipmap/rightbar_location"
+                />
 
             <TextView
+                android:layout_marginLeft="10dp"
                 style="@style/text_normal"
                 android:text="@string/home_distance"
                 />
@@ -275,10 +290,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 >
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/rightbar_stye"/>
                 <TextView
                     style="@style/text_normal"
                     android:text="@string/home_charge_type"
@@ -328,10 +345,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 >
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/rightbar_status"/>
                 <TextView
                     style="@style/text_normal"
                     android:text="@string/statue"
