--- a/app/src/main/res/layout/dialog_charge_fee.xml
+++ b/app/src/main/res/layout/dialog_charge_fee.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:paddingRight="15dp"
             android:layout_alignParentRight="true"
-            android:background="@color/red"
+            android:src="@mipmap/pop_ic_del"
             android:id="@+id/iv_cancel"
             />
     </RelativeLayout>
