--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -40,13 +40,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/ll_bottom_detail"
         android:layout_alignParentBottom="true"
-        android:padding="@dimen/dp_15"
         >
         <LinearLayout
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:padding="@dimen/dp_15"
+            android:background="@color/white"
             >
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -67,12 +68,16 @@
                 <TextView
                    style="@style/text_normal"
                     android:text="@string/score"
+                    android:textColor="@color/app_blue"
                     />
                 <ImageView
                     android:layout_marginLeft="15dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/pop_ic_open"
+                    />
                 <TextView
+                    android:layout_marginLeft="5dp"
                     style="@style/text_normal"
                     android:textSize="12dp"
                     android:text="@string/statue_charging_pile_open"
@@ -106,6 +111,7 @@
                 <TextView
                    style="@style/text_normal"
                     android:textColor="@color/app_blue"
+                    android:text="1"
                     />
                 <TextView
                     style="@style/text_normal"
@@ -119,6 +125,7 @@
                 <TextView
                     style="@style/text_normal"
                     android:textColor="@color/app_blue"
+                    android:text="3"
                     />
                 <TextView
                     style="@style/text_normal"
@@ -132,6 +139,7 @@
                 <TextView
                     style="@style/text_normal"
                     android:textColor="@color/app_blue"
+                    android:text="10"
                     />
                 <TextView
                     style="@style/text_normal"
@@ -142,9 +150,11 @@
                     android:layout_weight="1"
                     android:layout_height="10dp"/>
                 <ImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:background="@color/app_blue"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@mipmap/pop_ic_back"
+                    android:paddingRight="15dp"
+                    />
             </LinearLayout>
             <View
                 style="@style/view_line"/>
@@ -153,6 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 >
                 <TextView
                    style="@style/text_normal"
@@ -162,8 +173,10 @@
                    style="@style/text_normal"
                     android:text="0.0000元/度~0.0030元/度"/>
                 <ImageView
+                    android:layout_marginLeft="2dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/pop_ic_ask"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -189,6 +202,13 @@
                 android:text="@string/home_pay_style"
                 />
         </LinearLayout>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@mipmap/pop_ic_guide"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="25dp"
+            />
     </RelativeLayout>
 
 </RelativeLayout>
