--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,16 +24,23 @@
         <item name="android:background">@null</item>
         <item name="android:singleLine">true</item>
     </style>
+
     <style name="view_line">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/line</item>
     </style>
+
     <style name="MyDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@drawable/dialog_bg</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+    <!--充电站详情 电桩item style-->
+    <style name="charge_pile_item">
+        <item name="android:textSize">@dimen/text_title</item>
+        <item name="android:textColor">@color/black_bg</item>
     </style>
 </resources>
