--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -164,6 +164,7 @@
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:id="@+id/ll_fee"
                 >
                 <TextView
                    style="@style/text_normal"
