--- a/app/src/main/res/drawable/cb_pay_select.xml
+++ b/app/src/main/res/drawable/cb_pay_select.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-             android:drawable="@drawable/cb_on"
-            android:state_checked="true"/>
+        android:drawable="@mipmap/rb_on"
+        android:state_checked="true"/>
     <item
-        android:drawable="@drawable/cb_on"
+        android:drawable="@mipmap/rb_on"
         android:state_pressed="true"/>
     <item
-        android:drawable="@drawable/cb_on"
+        android:drawable="@mipmap/rb_on"
         android:state_focused="true"/>
     <item
-        android:drawable="@drawable/cb_off"
+        android:drawable="@mipmap/rb"
         android:state_checked="false"/>
     <item
-        android:drawable="@drawable/cb_off"/>
+        android:drawable="@mipmap/rb"/>
 </selector>
