--- a/app/src/main/res/layout/item_textview.xml
+++ b/app/src/main/res/layout/item_textview.xml
@@ -8,6 +8,7 @@
     <TextView
         android:id="@+id/textv_content"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"/>
 
 </LinearLayout>
