--- a/app/src/main/res/layout/v_nav.xml
+++ b/app/src/main/res/layout/v_nav.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="@dimen/nav_height"
+    android:background="@drawable/nan_bg"
     >
 
 
@@ -21,6 +22,7 @@
         android:layout_width="@dimen/nav_height"
         android:layout_height="match_parent"
         android:scaleType="center"
+        android:src="@mipmap/nav_ic_back"
          />
 
     <LinearLayout
