--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,20 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_bg"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin">
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/cover_iv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@mipmap/cover"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="220dp"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/logo" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,36 +37,39 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_48"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:background="@drawable/login_shape_bg"
         android:orientation="horizontal">
 
+
         <ImageView
-            android:layout_width="@dimen/dp_30"
-            android:layout_height="@dimen/dp_30"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:src="@mipmap/ic_launcher" />
-
-        <LinearLayout
-            android:id="@+id/phone_cut_line_ll"
+            android:id="@+id/phone_iv"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:src="@mipmap/default_ic_ip" />
+
+        <!-- invisible-->
+        <ImageView
+            android:id="@+id/phone_dropdown_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:src="@mipmap/pop_ic_down"
+            android:visibility="visible" />
+
+        <!-- goon-->
+        <View
+            android:id="@+id/phone_cut_line"
+            android:layout_width="@dimen/dp_1"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/phone_dropdown_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:src="@mipmap/ptr_rotate_arrow" />
-
-            <View
-                android:layout_width="@dimen/dp_1"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:background="@color/text_white" />
-        </LinearLayout>
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_marginRight="@dimen/dp_5"
+            android:background="@color/text_white"
+            android:visibility="visible" />
 
         <EditText
             android:id="@+id/phone_et"
@@ -81,32 +89,38 @@
         android:id="@+id/input_pwd_ll"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_48"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@drawable/login_shape_bg"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="@dimen/dp_30"
-            android:layout_height="@dimen/dp_30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_20"
+            android:src="@mipmap/default_ic_lock" />
 
+        <!-- goon-->
         <View
+            android:id="@+id/lock_cut_line"
             android:layout_width="@dimen/dp_1"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dp_30"
-            android:background="@color/text_white" />
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_marginRight="@dimen/dp_5"
+            android:background="@color/text_white"
+            android:visibility="visible" />
 
         <EditText
             android:id="@+id/pwd_et"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
             android:background="@null"
             android:hint="@string/hint_input_password"
-            android:inputType="textPassword"
             android:singleLine="true"
             android:textColor="@color/text_white"
             android:textColorHint="@color/text_gray" />
@@ -115,7 +129,9 @@
     <LinearLayout
         android:id="@+id/type_code_ll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -127,11 +143,12 @@
 
             <ImageView
                 android:id="@+id/key_iv"
-                android:layout_width="@dimen/dp_30"
-                android:layout_height="@dimen/dp_30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_marginLeft="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_20"
+                android:src="@mipmap/default_ic_key" />
 
             <EditText
                 android:id="@+id/code_et"
@@ -163,6 +180,8 @@
         android:id="@+id/login_tv"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_48"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@drawable/blue_shape_bg"
         android:gravity="center"
@@ -173,7 +192,9 @@
     <RelativeLayout
         android:id="@+id/forget_pwd_register_rl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/forget_pwd_tv"
