--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_0.5">0.5dp</dimen>
     <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
