--- a/app/src/main/res/layout/activity_charge_statue.xml
+++ b/app/src/main/res/layout/activity_charge_statue.xml
@@ -17,6 +17,47 @@
         android:text="南京雨花台区充电站"
         android:layout_marginTop="20dp"
         />
+    <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="25dp">
+        <com.isoftston.issuser.fusioncharge.weights.CircleProgressView
+
+            android:layout_width="190dp"
+            android:layout_height="190dp"
+            android:id="@+id/progress"
+            android:layout_centerInParent="true"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_centerHorizontal="true"
+            >
+            <TextView
+               style="@style/text_normal"
+                android:textColor="@color/app_blue"
+                android:textSize="50dp"
+                android:text="03:58"
+                android:textStyle="bold"
+                android:id="@+id/tv_charge_time"
+                />
+            <TextView
+                android:layout_marginTop="7dp"
+                style="@style/text_normal"
+                android:textSize="@dimen/text_small_small"
+                android:text="@string/charging_statue_time"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_time01"
+                android:layout_marginTop="15dp"
+                />
+        </LinearLayout>
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,13 +73,13 @@
             >
             <TextView
                 style="@style/text_normal"
-                android:text="58.59"
+                android:text="0"
                 android:textSize="16sp"
                 />
             <TextView
                 android:layout_marginTop="10dp"
                 style="@style/text_normal"
-                android:text="@string/charging_statue_a"
+                android:text="@string/charging_statue_kw"
                 />
         </LinearLayout>
         <View
@@ -51,6 +92,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
+            android:visibility="gone"
             >
             <TextView
                 style="@style/text_normal"
@@ -66,7 +108,8 @@
         <View
             android:layout_width="1dip"
             android:layout_height="25dp"
-            android:background="@color/line"/>
+            android:background="@color/line"
+            android:visibility="gone"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -82,7 +125,7 @@
             <TextView
                 android:layout_marginTop="10dp"
                 style="@style/text_normal"
-                android:text="@string/charging_statue_soc"
+                android:text="@string/charging_statue_current"
                 />
         </LinearLayout>
 
