--- a/app/src/main/res/layout/activity_appointment_charge.xml
+++ b/app/src/main/res/layout/activity_appointment_charge.xml
@@ -16,7 +16,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_200"
-        android:src="@mipmap/charge_car" />
+        android:src="@mipmap/home_bg" />
 
     <RelativeLayout
         android:id="@+id/appoint_time_rl"
@@ -35,6 +35,7 @@
             android:text="@string/appoint_charge_choice_time_title" />
 
         <TextView
+            android:id="@+id/chosed_time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
