--- a/app/src/main/res/layout/activity_charge_details.xml
+++ b/app/src/main/res/layout/activity_charge_details.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/charge_pile_name_tv"
-            android:src="@mipmap/icon_pull_refresh_process_1" />
+            android:src="@mipmap/pop_ic_out" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -77,10 +77,11 @@
             android:text="南京市雨花台区花神大道17号" />
 
         <ImageView
+            android:layout_marginRight="@dimen/dp_5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/distance_tv"
-            android:src="@mipmap/icon_pull_refresh_process_1" />
+            android:src="@mipmap/icon_guide" />
 
         <TextView
             android:id="@+id/distance_tv"
@@ -128,10 +129,16 @@
             android:text="@string/charging_pile_comments" />
     </LinearLayout>
 
-    <com.isoftston.issuser.fusioncharge.weights.MyViewPager
-        android:id="@+id/my_view_pager"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/line" />
+        android:layout_height="wrap_content"
+        android:background="@color/line">
 
+        <com.isoftston.issuser.fusioncharge.weights.MyViewPager
+            android:id="@+id/my_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@color/line" />
+    </LinearLayout>
 </LinearLayout>
