--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -160,6 +160,7 @@
                     android:layout_weight="1"
                     android:layout_height="10dp"/>
                 <ImageView
+                    android:id="@+id/enter_charge_station_iv"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@mipmap/pop_ic_back"
