--- a/app/src/main/res/layout/item_charge_pile_list.xml
+++ b/app/src/main/res/layout/item_charge_pile_list.xml
@@ -21,12 +21,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@mipmap/icon_pull_refresh_process_2" />
+                android:src="@mipmap/charge_off" />
 
             <TextView
                 android:id="@+id/pile_status_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_5"
                 android:text="@string/statue_online" />
         </LinearLayout>
 
@@ -128,6 +130,12 @@
         android:id="@+id/electric_gun_lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginRight="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:divider="@null"
+        android:dividerHeight="@dimen/dp_10"
         android:visibility="visible" />
 
     <com.corelibs.views.NoScrollingListView
