--- a/app/src/main/res/layout/item_electric_gun_list.xml
+++ b/app/src/main/res/layout/item_electric_gun_list.xml
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/blue_stroke_bg"
+        android:background="@drawable/blue_stroke_90angle_bg"
         android:paddingBottom="@dimen/dp_5"
         android:paddingLeft="@dimen/dp_20"
         android:paddingRight="@dimen/dp_20"
