--- a/app/src/main/res/layout/layout_top_hint.xml
+++ b/app/src/main/res/layout/layout_top_hint.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:id="@+id/ll_appointment">
     <!--顶部预约-->
    
         <RelativeLayout
@@ -24,7 +25,8 @@
                 <TextView
                     android:layout_marginLeft="7dp"
                     style="@style/text_normal"
-                    android:text="南京市雨花台区花神大道17号"/>
+                    android:text="南京市雨花台区花神大道17号"
+                    android:id="@+id/tv_appointment_address"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -37,11 +39,12 @@
                     style="@style/text_normal"
                     android:text="14:59"
                     android:textColor="@color/red"
+                    android:id="@+id/tv_appointment_time"
                     />
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/lv_hint"
+                    android:id="@+id/iv_hint"
                     android:src="@mipmap/pop_ic_down"
                     android:layout_marginLeft="5dp"
                     />
@@ -72,11 +75,13 @@
                     style="@style/text_normal"
                     android:textColor="@color/text_color_shallow"
                     android:text="@string/guilding_charging_pile_no"
+
                     />
                 <TextView
                     style="@style/text_normal"
                     android:layout_marginLeft="10dp"
                     android:text="2018773748"
+                    android:id="@+id/tv_pile_num"
                     />
             </LinearLayout>
             <View
@@ -103,6 +108,7 @@
                     android:layout_marginLeft="10dp"
                     style="@style/text_normal"
                     android:text="南京雨花台能瑞充电站"
+                    android:id="@+id/tv_pile_name"
                     />
             </LinearLayout>
             <View
@@ -129,6 +135,7 @@
                     android:layout_marginLeft="10dp"
                     style="@style/text_normal"
                     android:text="123456"
+                    android:id="@+id/tv_gun_num"
                     />
             </LinearLayout>
         </LinearLayout>
