--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -45,7 +45,7 @@
                     >
                     <TextView
                         style="@style/text_normal"
-                        android:text="100.25度"
+                        android:id="@+id/tv_charger_enegry"
                         />
                     <ImageView
                         android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     style="@style/text_normal"
-                    android:text="8.05元"
+                    android:id="@+id/tv_charger_fee"
                     />
 
             </RelativeLayout>
@@ -93,7 +93,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     style="@style/text_normal"
-                    android:text="8.05元"
+                    android:id="@+id/tv_charge_service_fee"
                     />
 
             </RelativeLayout>
@@ -120,12 +120,12 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         style="@style/text_normal"
-                        android:text="￥8.05"
                         android:textColor="@color/red"
+                        android:id="@+id/tv_total_fee"
                         />
                     <TextView
                         style="@style/text_normal"
-                        android:text="元"
+                        android:text="@string/yuan"
                         />
                 </LinearLayout>
 
