--- a/app/src/main/res/layout/layout_top_hint.xml
+++ b/app/src/main/res/layout/layout_top_hint.xml
@@ -9,7 +9,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:paddingLeft="15dp"
+
             android:paddingRight="15dp">
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -19,8 +19,10 @@
                 >
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:src="@mipmap/icon_guide"
+                    android:paddingLeft="15dp"
+                    android:id="@+id/iv_appointment_guaild"
                     />
                 <TextView
                     android:layout_marginLeft="7dp"
@@ -34,6 +36,7 @@
                 android:orientation="horizontal"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical"
+                android:id="@+id/ll_time"
                 >
                 <TextView
                     style="@style/text_normal"
@@ -55,6 +58,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/ll_hint"
+            android:visibility="gone"
             >
             <View
                 style="@style/view_line"/>
