--- a/app/src/main/res/layout/v_nav.xml
+++ b/app/src/main/res/layout/v_nav.xml
@@ -51,7 +51,7 @@
         <TextView
             style="@style/text_normal"
             android:layout_height="match_parent"
-            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:textColor="@color/white"
             android:text="@string/action_cancel_appointment"
             android:gravity="center"
