--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -122,6 +122,7 @@
             android:background="@null"
             android:hint="@string/hint_input_password"
             android:singleLine="true"
+            android:inputType="textPassword"
             android:textColor="@color/text_white"
             android:textColorHint="@color/text_gray" />
     </LinearLayout>
