--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -54,7 +54,35 @@
     <include layout="@layout/layout_top_hint"
         android:visibility="gone"
         />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/white"
+        android:paddingLeft="@dimen/dp_15"
+        android:paddingRight="@dimen/dp_15"
+        android:id="@+id/rl_charger_order"
+        android:clickable="true"
+        android:visibility="gone"
+        >
+        <TextView
+            style="@style/text_normal"
+            android:text="@string/home_start_charging"
+            android:layout_centerVertical="true"
+            />
 
+        <TextView
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            style="@style/text_normal"
+            android:layout_width="70dp"
+            android:layout_height="25dp"
+            android:background="@drawable/cb_on"
+            android:text="@string/home_go_charger"
+            android:gravity="center"
+            android:textColor="@color/app_blue"
+            android:id="@+id/tv_go_charger"
+            />
+    </RelativeLayout>
 
     <!--底部详情-->
     <RelativeLayout
